# vertex-mcp-chatbot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  main.py  mcp_config.json.example  pyproject.toml  pytest.ini  run_tests.py
.claude/agents/: mcp-expert.md  project-manager-mcp.md  python-code-reviewer.md
.github/: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md  claude-agent.md  mcp-api.md  mcp-config-reference.md  mcp-guide.md  mcp-oauth-guide.md  mcp-troubleshooting.md
examples/: README.md  mcp_config.json
examples/mcp-servers/: filesystem_server.py  oauth_auth_server.py  oauth_protected_server.py  weather_server.py
plans/: implement-mcp-client-detailed.md  implement-mcp-client.md
scripts/: pre_commit_demo.py  run_example_tests.py  run_tests.py
src/: __init__.py  chatbot.py  claude_agent_chatbot.py  claude_agent_client.py  claude_sdk_fallback.py  config.py  gemini_client.py  mcp_config.py  mcp_manager.py
tests/: conftest.py  mock_mcp_types.py  test_async_utils.py  test_chatbot.py  test_claude_agent_chatbot.py  test_claude_agent_chatbot_extended.py  test_claude_agent_client.py  test_claude_agent_client_extended.py  test_config.py  test_config_extended.py  test_filesystem_server.py  test_gemini_client.py  test_gemini_client_mcp.py  test_helpers.py  test_integration.py  test_main.py  test_mcp_chat_integration.py  test_mcp_config.py  test_mcp_env_substitution.py  test_mcp_fixtures.py  test_mcp_http_transport.py  test_mcp_imports.py  test_mcp_manager.py  test_mcp_manager_extended.py  test_mcp_manager_oauth.py  test_mcp_multi_server.py  test_mcp_oauth.py  test_mcp_oauth_simple.py  test_mcp_oauth_simplified.py  test_mcp_prompts.py  test_mcp_resources.py  test_mcp_retry.py  test_oauth_servers.py  test_oauth_url_encoding.py  test_scrollable_output.py  test_scrollable_response.py  test_weather_server.py
